--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,9 +13,8 @@ jobs:
         sudo apt update
         sudo apt install -y build-essential ccache ecj fastjar file g++ gawk \
         gettext git java-propose-classpath libelf-dev libncurses5-dev \
-        libncursesw5-dev libssl-dev python python2.7-dev python3 unzip wget \
-        python3-distutils python3-setuptools python3-dev rsync subversion \
-        swig time
+        libncursesw5-dev libssl-dev python3 python3-dev python3-setuptools \
+        python3-pyelftools unzip wget rsync subversion swig time
     - name: Update & install feeds
       run: |
         ./scripts/feeds update -a
